<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/White" >

    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:background="@drawable/title_tab" >
	    <Button
	        android:id="@+id/btn_Back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/BACK"
	        android:textColor="@color/White"
	        android:layout_marginLeft="5dip"
	        android:background="@drawable/btn_zuruck" />
	    <TextView
	        android:id="@+id/txt_titleBar_displayIn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/INFO_ANFAHRT_PKW"
	        android:layout_weight="1"
	        android:textStyle="bold"
	        android:gravity="center"
	        android:textSize="18dip"
	        android:textColor="@color/White" />
	    <Button
	        android:id="@+id/btn_Home"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dip"
	        android:background="@drawable/home" />
	</LinearLayout>

<!--     <ScrollView  -->
<!-- 	    android:layout_width="fill_parent" -->
<!-- 	    android:layout_height="fill_parent" -->
<!-- 	    android:scrollbars="vertical" -->
<!-- 	    android:cacheColorHint="#ff000000" > -->
	    <LinearLayout
	        	android:id="@+id/linear_Details" 
	        	android:layout_width="fill_parent"
	        	android:layout_height="fill_parent"
	        	android:orientation="vertical"
	        	android:layout_marginTop="10dip"
	        	android:layout_marginLeft="10dip"
	        	android:layout_marginRight="10dip">
	        	<LinearLayout 
	        	    android:layout_width="fill_parent"
	        	    android:layout_height="wrap_content"
	        	    android:background="@drawable/blank_bg2"
	        	    android:orientation="vertical">
	        	    <TextView
		        	    android:layout_width="fill_parent"
		        	    android:layout_height="match_parent"
		        	    android:gravity="center_vertical"
		        	    android:text="@string/INFO_ANFAHRT_AUTO"
		        	    android:textSize="16dip"
		        	    android:textStyle="bold"
		        	    android:textColor="@color/kinder_detail_font_color"
		        	    android:paddingTop="15dip"
		        	    android:paddingLeft="15dip" />
	        	    <TextView
		        	    android:layout_width="fill_parent"
		        	    android:layout_height="wrap_content"
		        	    android:text="@string/INFO_ANFAHRT_AUTOBAHANAUSFAHRT"
		        	    android:textSize="16dip"
		        	    android:textStyle="bold"
		        	    android:textColor="@color/kinder_detail_font_color"
		        	    android:paddingTop="10dip"
		        	    android:paddingLeft="15dip" />
	        	    <TextView
	        	        android:id="@+id/txt_description"
		        	    android:layout_width="fill_parent"
		        	    android:layout_height="wrap_content"
		        	    android:text="@string/INFO_ANFAHRT_AUTOBAHANAUSFAHRT"
		        	    android:textColor="@color/kinder_detail_font_color"
		        	    android:paddingTop="1dip"
		        	    android:paddingLeft="15dip" />
	        	    <TextView
		        	    android:layout_width="fill_parent"
		        	    android:layout_height="wrap_content"
		        	    android:text="@string/INFO_ANFAHRT_ADDRESS"
		        	    android:textSize="18dip"
		        	    android:textColor="@color/kinder_detail_font_color"
		        	    android:paddingTop="10dip"
		        	    android:paddingLeft="15dip" />
	        	    <TextView
		        	    android:id="@+id/txt_address"
		        	    android:layout_width="fill_parent"
		        	    android:layout_height="wrap_content"
		        	    android:text="@string/INFO_ANFAHRT_ADDRESS"
		        	    android:textSize="16dip"
		        	    android:paddingLeft="15dip" />	        		    
	        	</LinearLayout>
	        	
	        	<LinearLayout 
	        	    android:layout_width="fill_parent"
	        	    android:layout_height="wrap_content"
	        	    android:background="@drawable/blank_bg2"
	        	    android:orientation="vertical"
	        	    android:layout_marginTop="10dip">
	        	    <TextView
		        	    android:layout_width="fill_parent"
		        	    android:layout_height="match_parent"
		        	    android:gravity="center_vertical"
		        	    android:text="@string/INFO_ANFAHRT_ZWEIRAD"
		        	    android:textSize="16dip"
		        	    android:textStyle="bold"
		        	    android:textColor="@color/kinder_detail_font_color"
		        	    android:paddingTop="15dip"
		        	    android:paddingLeft="15dip" />
	        	    <TextView
		        	    android:id="@+id/txt_roller"
		        	    android:layout_width="fill_parent"
		        	    android:layout_height="wrap_content"
		        	    android:paddingTop="5dip"
		        	    android:paddingLeft="15dip" />
	        	</LinearLayout>
	        	
	        	<TextView
	        	    android:id="@+id/txt_googlemap"
	        	    android:layout_width="fill_parent"
	        	    android:layout_height="wrap_content"
	        	    android:layout_marginTop="10dip"
	        	    android:gravity="center_vertical"
	        	    android:text="@string/INFO_AHFAHRT_GOOGLEMAP"
	        	    android:textSize="18dip"
	        	    android:textStyle="bold"
	        	    android:paddingLeft="15dip"
	        	    android:textColor="@color/kinder_detail_font_color"
	        	    android:background="@drawable/googlemap_icon_bg"/>
	   </LinearLayout>
<!-- 	</ScrollView> -->
</LinearLayout>