<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/White" >
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:background="@drawable/title_tab" >
	    <Button
	        android:id="@+id/btn_Back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/BACK"
	        android:textColor="@color/White"
	        android:background="@drawable/btn_zuruck"
	        android:layout_marginLeft="5dip" />
	    <TextView
	        android:id="@+id/txt_titleBar_displayIn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/SHOPINGLIST"
	        android:layout_weight="1"
	        android:textStyle="bold"
	        android:textSize="18dip"
	        android:gravity="center"
	        android:textColor="@color/White" />
	    <Button
	        android:id="@+id/btn_Home"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="5dip"
	        android:background="@drawable/home" />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	
	    <EditText
	        android:id="@+id/edtadd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:singleLine="true"
	     />
		 <Button
	        android:id="@+id/btnadd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Add" />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:layout_marginBottom="5dip"
	    android:orientation="vertical" >
		<ListView android:layout_width="fill_parent"
	          android:layout_height="fill_parent"
	          android:id="@+id/list1"
	          android:divider="@android:color/transparent"
	          android:cacheColorHint="@android:color/transparent"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:layout_marginTop="5dip"
	    android:orientation="vertical" >
		<ListView android:layout_width="fill_parent"
	          android:layout_height="fill_parent"
	          android:id="@+id/list2"
	          android:divider="@android:color/transparent"
	          android:cacheColorHint="@android:color/transparent"/>
			</LinearLayout>
</LinearLayout>